frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
@use "@/Styles/mixins" as m;

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px 50px;
  padding: 0 2px;
  padding-block: 1.5rem;
  position: sticky;
  top: 89px;
  left: 0;
  z-index: 10;
  background-color: #0e1217;
  transition: background-color .3s;
}

@media (max-width: 1300px) {
  .header {
    margin: 10px 20px 30px;
    padding: 1.5rem;
    margin-inline: 0;
    background-color: #14171d;
  }
}

@include m.medium {
  .header {
    top: 79px;
  }
}

@media (max-width: 480px) {
  .header {
    flex-direction: column;
    align-items: flex-start;
    position: static;
  }
}

.header .wrapper>h3 {
  font-size: 1.4rem;
  font-weight: 700;
  text-wrap: nowrap;
  margin-bottom: 10px;
}

.header .wrapper>p {
  color: #9ca3af;
}

.header .wrapper>p>span {
  color: #cdd4de;
  font-weight: 500;
}

